Por Igor Monárdez: Restrição de acesso usuário admin feito, erros nos deletes dos CRUDS

--- a/app/views/admins_backoffice/campus/show.html.erb
+++ b/app/views/admins_backoffice/campus/show.html.erb
@@ -30,5 +30,5 @@
   <%= @campu.cep %>
 </p>
 
-<%= link_to 'Edit', edit_campu_path(@campu) %> |
-<%= link_to 'Back', campus_path %>
+<%= link_to 'Edit', edit_admins_backoffice_campu_path(@campu) %> |
+<%= link_to 'Back', admins_backoffice_campus_path %>
