--- a/app/views/users_backoffice/caronas/new.html.erb
+++ b/app/views/users_backoffice/caronas/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', carona: @carona %>
 
-<%= link_to 'Back', caronas_path %>
+<%= link_to 'Back', users_backoffice_caronas_path %>
