--- a/app/views/admins_backoffice/campus/_form.html.erb
+++ b/app/views/admins_backoffice/campus/_form.html.erb
@@ -1,8 +1,7 @@
-<%= form_with(model: campu) do |form| %>
+<%= form_with(model: [ :admins_backoffice, @campu ]) do |form| %>
   <% if campu.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(campu.errors.count, "error") %> prohibited this campu from being saved:</h2>
-
       <ul>
         <% campu.errors.each do |error| %>
           <li><%= error.full_message %></li>
