--- a/app/views/admins_backoffice/campus/edit.html.erb
+++ b/app/views/admins_backoffice/campus/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', campu: @campu %>
 
-<%= link_to 'Show', @campu %> |
-<%= link_to 'Back', campus_path %>
+<%= link_to 'Show', admins_backoffice_campu_path(@campu) %> |
+<%= link_to 'Back', admins_backoffice_campus_path %>
