--- a/app/views/layouts/users_backoffice.html.erb
+++ b/app/views/layouts/users_backoffice.html.erb
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <header>
+  <head>
+    <title> Sistema de carona da UFF | CARONUFF</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
 
-  </header>
+    <%= stylesheet_link_tag 'users_backoffice', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+  </head>
   <body>
+  <%= render 'layouts/header_users_backoffice' %>
   <%= yield %>
   </body>
 </html>
