--- a/app/views/users_backoffice/caronas/edit.html.erb
+++ b/app/views/users_backoffice/caronas/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', carona: @carona %>
 
-<%= link_to 'Show', @carona %> |
-<%= link_to 'Back', caronas_path %>
+<%= link_to 'Show', users_backoffice_carona_path(@carona) %> |
+<%= link_to 'Back', user_backoffice_caronas_path %>
