--- a/app/views/layouts/_header_admins_backoffice.erb
+++ b/app/views/layouts/_header_admins_backoffice.erb
@@ -6,6 +6,7 @@
       <li> <%= link_to 'Usuários', admins_backoffice_users_path %></li>
       <li> <%= link_to 'Admins', admins_backoffice_admins_path %></li>
       <li> <%= link_to 'Sair',  destroy_admin_session_path, method: :delete %></li>
+      <li> <%= link_to 'Página inicial', site_welcome_index_path %></li>
     </ul>
   </nav>
 </header>
