--- a/app/views/admins_backoffice/admins/index.html.erb
+++ b/app/views/admins_backoffice/admins/index.html.erb
@@ -1,5 +1,5 @@
 <h1> Lista de admins </h1>
-<table>
+<table id="example" class="table table-striped table-bordered" style="width:100%">
   <thead>
   <tr>
     <th>ID</th>
