--- a/app/views/admins_backoffice/campus/index.html.erb
+++ b/app/views/admins_backoffice/campus/index.html.erb
@@ -1,8 +1,6 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Campus</h1>
-
-<table>
+<th><%= link_to 'Novo Campu', new_admins_backoffice_campu_path %></th>
+<table id="example" class="table table-striped table-bordered" style="width:100%">
   <thead>
     <tr>
       <th>Endereço</th>
@@ -14,8 +12,8 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
+
     <% @campus.each do |campu| %>
       <tr>
         <td><%= campu.address %></td>
@@ -27,15 +25,22 @@
         <td><%= link_to 'Olhe', admins_backoffice_campu_path(campu) %></td>
         <td><%= link_to 'Edite', edit_admins_backoffice_campu_path(campu) %></td>
         <% if campu.active %>
-        <td><%= link_to 'Destrua', admins_backoffice_campu_destroy_campu_path(campu), data: { confirm: 'Tem certeza?' } %></td>
+          <td><%= link_to 'Destrua', admins_backoffice_campu_destroy_campu_path(campu), data: { confirm: 'Tem certeza?' } %></td>
         <% else %>
           <td><%= link_to 'Reative', admins_backoffice_campu_reactive_campu_path(campu), data: { confirm: 'Tem certeza?' } %></td>
-        </tr>
-          <% end %>
+          </tr>
+        <% end %>
     <% end %>
   </tbody>
+  <tfoot>
+  <tr>
+    <th>Endereço</th>
+    <th>Nome</th>
+    <th>Numero</th>
+    <th>Bairro</th>
+    <th>Cidade</th>
+    <th>Cep</th>
+    <th colspan="3"></th>
+  </tr>
+  </tfoot>
 </table>
-
-<br>
-
-<%= link_to 'Novo Campu', new_admins_backoffice_campu_path %>
