--- a/app/views/layouts/_header_users_backoffice.html.erb
+++ b/app/views/layouts/_header_users_backoffice.html.erb
@@ -1,10 +1,12 @@
-<header class="header">
-  <a href="/"> <%= image_tag('logo_uff.png',width: 100,draggable: "true", id:'logo-uff',alias: 'Logo da UFF') %> </a>
-  <nav class="nav">
-    <ul class="menu">
-      <li><%= link_to 'Lista de Caronas',  users_backoffice_user_caronas_path(current_user)%></li>
-      <li><%= link_to 'Sair', destroy_user_session_path %></li>
-      <li> <%= link_to 'Página inicial', site_welcome_index_path %></li>
+<header  class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+  <a href="/">
+    <%= image_tag('logo_uff.png',width: 70,role: 'img',class: "bi me-2", draggable: "true", alias: 'Logo da UFF') %>
+  </a>
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <li><%= link_to 'Caronas',  users_backoffice_user_caronas_path(current_user), class: 'nav-link px-2 link-dark'%></li>
+      <li> <%= link_to 'Página inicial', site_welcome_index_path, class: 'nav-link px-2 link-dark' %></li>
     </ul>
-  </nav>
+  <div class="col-md-3 text-end">
+    <li><a><%= link_to 'Sair', destroy_user_session_path, method: :delete, class: "btn btn-primary" %></a></li>
+  </div>
 </header>
