--- a/app/views/users_backoffice/caronas/index.html.erb
+++ b/app/views/users_backoffice/caronas/index.html.erb
@@ -1,15 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Caronas</h1>
-
-<table>
+<%= link_to 'New Carona', new_users_backoffice_user_carona_path %>
+<table id="example" class="table table-striped table-bordered" style="width:100%">
   <thead>
     <tr>
-      <th>Preco</th>
+      <th>Preço</th>
       <th>Quantidade de passageiros</th>
-      <th>Date hour</th>
-      <th>Departure</th>
-      <th>Arrival</th>
+      <th>Hora e data</th>
+      <th>Partida</th>
+      <th>Chega</th>
+      <th>Comentários</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,6 +23,7 @@
         <td><%= carona.date_hour %></td>
         <td><%= carona.departure %></td>
         <td><%= carona.arrival %></td>
+        <td><%= carona.comments %></td>
         <td><%= link_to 'Show', users_backoffice_carona(carona) %></td>
         <td><%= link_to 'Edit', edit_users_backoffice_carona_path(carona) %></td>
         <td><%= link_to 'Destroy', users_backoffice_carona_destroy_path(carona), method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -32,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Carona', new_users_backoffice_user_carona_path %>
+
