--- a/app/views/users_backoffice/search_caronas/edit.html.erb
+++ b/app/views/users_backoffice/search_caronas/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', search_carona: @search_carona %>
 
-<%= link_to 'Show', @search_carona %> |
-<%= link_to 'Back', search_caronas_path %>
+<%= link_to 'Show',  users_backoffice_user_search_carona_path(current_user, @search_carona) %> |
+<%= link_to 'Back', users_backoffice_user_search_caronas_path(current_user) %>
