--- a/app/views/users_backoffice/search_caronas/index.html.erb
+++ b/app/views/users_backoffice/search_caronas/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Search Caronas</h1>
 
-<table>
+<table id="example" class="table table-striped table-bordered" style="width:100%">
   <thead>
     <tr>
       <th>Partida</th>
@@ -18,9 +18,9 @@
         <td><%= search_carona.partida %></td>
         <td><%= search_carona.chegada %></td>
         <td><%= search_carona.user_id %></td>
-        <td><%= link_to 'Show', search_carona %></td>
-        <td><%= link_to 'Edit', edit_search_carona_path(search_carona) %></td>
-        <td><%= link_to 'Destroy', search_carona, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', users_backoffice_user_search_carona_path(current_user, search_carona) %></td>
+        <td><%= link_to 'Edit',  edit_users_backoffice_user_search_carona_path(current_user, search_carona) %></td>
+        <td><%= link_to 'Destroy',  users_backoffice_user_search_carona_search_carona_path(current_user,search_carona), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Search Carona', new_search_carona_path %>
+<%= link_to 'New Search Carona', new_users_backoffice_user_search_carona_path %>
