--- a/app/views/users_backoffice/search_caronas/new.html.erb
+++ b/app/views/users_backoffice/search_caronas/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', search_carona: @search_carona %>
 
-<%= link_to 'Back', search_caronas_path %>
+<%= link_to 'Back', users_backoffice_user_search_caronas_path(current_user) %>
