--- a/app/views/layouts/_header_admins_backoffice.erb
+++ b/app/views/layouts/_header_admins_backoffice.erb
@@ -1,13 +1,12 @@
 <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
   <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-    <%= image_tag('logo_uff.png',width: 70, role: 'img', draggable: "true", class: "bi me-2",alias: 'Logo da UFF') %>
+    <%= image_tag('logo_uff.png',width: 60, role: 'img', draggable: "true", class: "bi me-2",alias: 'Logo da UFF') %>
   </a>
 
   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-    <li><a><%= link_to 'Campus', admins_backoffice_campus_path, class: 'nav-link px-2 link-dark' %></a></li>
-    <li><a><%= link_to 'Usuários', admins_backoffice_users_path, class: 'nav-link px-2 link-dark' %></a></li>
-    <li><a> <%= link_to 'Admins', admins_backoffice_admins_path, class: 'nav-link px-2 link-dark' %></a></li>
-    <li><a><%= link_to 'Página inicial', site_welcome_index_path,  class: 'nav-link px-2 link-dark' %></a></li>
+    <li><%= link_to 'Campus', admins_backoffice_campus_path, class: 'nav-link px-2 link-gray' %></li>
+    <li><%= link_to 'Usuários', admins_backoffice_users_path, class: 'nav-link px-2 link-gray' %></li>
+    <li> <%= link_to 'Admins', admins_backoffice_admins_path, class: 'nav-link px-2 link-gray' %></li>
   </ul>
 
   <div class="col-md-3 text-end">
