--- a/app/views/users_backoffice/search_caronas/index.html.erb
+++ b/app/views/users_backoffice/search_caronas/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Search Caronas</h1>
+<h1>Procurar as caronas</h1>
 
 <table id="example" class="table table-striped table-bordered" style="width:100%">
   <thead>
