--- a/app/views/users_backoffice/caronas/_form.html.erb
+++ b/app/views/users_backoffice/caronas/_form.html.erb
@@ -36,6 +36,10 @@
   </div>
 
   <div class="field">
+    Possui pontos intermediários: clique <%= link_to 'Aqui', new_users_backoffice_user_carona_point_path(current_user,@carona.id) %>
+  </div>
+
+  <div class="field">
     <%= form.label :comentários %>
     <%= form.text_field :comments %>
   </div>
