--- a/app/views/users_backoffice/caronas/index.html.erb
+++ b/app/views/users_backoffice/caronas/index.html.erb
@@ -9,7 +9,6 @@
       <th>Quantidade de passageiros</th>
       <th>Hora e data</th>
       <th>Partida</th>
-      <th>Pontos intermediários</th>
       <th>Chegada</th>
       <th>Comentários</th>
       <th colspan="3"></th>
@@ -19,14 +18,15 @@
   <tbody>
     <% @caronas.each do |carona| %>
       <tr>
+        <% cookies[:carona_id] = carona.id %>
         <td><%= carona.preco %></td>
         <td><%= carona.qtd_passageiros %></td>
         <td><%= carona.date_hour %></td>
         <td><%= carona.departure %></td>
-        <% @points.each do |point| %>
-          <td><%= point.departure %></td>
-        <% end %>
         <td><%= carona.arrival %></td>
+        <%= @points.each do |point| %>
+          <td><%= point.address %></td>
+        <% end %>
         <td><%= carona.comments %></td>
         <td><%= link_to 'Show', users_backoffice_user_carona_path(current_user,carona) %></td>
         <td><%= link_to 'Edit', edit_users_backoffice_user_carona_path(current_user,carona) %></td>
