--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -18,6 +18,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :iduff %>
+    <%= f.number_field :iduff, autofocus: true %>
+  </div>
+
+  <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
     <% if @minimum_password_length %>
