--- a/app/views/users_backoffice/caronas/index.html.erb
+++ b/app/views/users_backoffice/caronas/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Preço</th>
-      <th>Quantidade de passageiros</th>
+      <th>Passageiros</th>
       <th>Hora e data</th>
       <th>Partida</th>
       <th>Chegada</th>
