--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,11 +11,14 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= require easy-autocomplete
  *= require_self
+ *=
  */
 @import "bootstrap-custom";
+@import 'easy-autocomplete/dist/easy-autocomplete';
 
 
 header{
-  background-color: gray;
+  background-color: black;
 }
