--- a/app/views/users_backoffice/caronas/index.html.erb
+++ b/app/views/users_backoffice/caronas/index.html.erb
@@ -10,6 +10,7 @@
       <th>Hora e data</th>
       <th>Partida</th>
       <th>Chegada</th>
+      <th>Passando por</th>
       <th>Comentários</th>
       <th colspan="3"></th>
     </tr>
@@ -18,14 +19,13 @@
   <tbody>
     <% @caronas.each do |carona| %>
       <tr>
-        <% cookies[:carona_id] = carona.id %>
         <td><%= carona.preco %></td>
         <td><%= carona.qtd_passageiros %></td>
         <td><%= carona.date_hour %></td>
         <td><%= carona.departure %></td>
         <td><%= carona.arrival %></td>
-        <%= @points.each do |point| %>
-          <td><%= point.address %></td>
+        <%= Point.all.where(carona_id: carona.id).each do |point| %>
+          <%= point.address %>
         <% end %>
         <td><%= carona.comments %></td>
         <td><%= link_to 'Show', users_backoffice_user_carona_path(current_user,carona) %></td>
