Por Igor Monárdez: Validações de campus

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -9,13 +9,13 @@
   </div>
 
   <div class="field">
-      <%= f.label :name %><br />
-      <%= f.text_field :name, autofocus: true %>
-    </div>
+    <%= f.label :nome %><br />
+    <%= f.text_field :name, autofocus: true, autocomplete: "email" %>
+  </div>
 
   <div class="field">
-      <%= f.label :iduff %><br />
-      <%= f.number_field :iduff, autofocus: true %>
+    <%= f.label :iduff %><br />
+    <%= f.number_field :iduff, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
