--- a/app/views/users_backoffice/caronas/_point_fields.html.erb
+++ b/app/views/users_backoffice/caronas/_point_fields.html.erb
@@ -1,7 +1,7 @@
 <div class="nested-fields">
   <div class="field">
-    <%= f.label :endereco %>
+    <%= f.label :paradas %>
     <%= f.text_field :address %>
+    <%= link_to_remove_association 'Remover parada', f %>
   </div>
-  <%= link_to_remove_association 'Remover parada', f %>
 </div>
