--- a/app/views/users_backoffice/caronas/index.html.erb
+++ b/app/views/users_backoffice/caronas/index.html.erb
@@ -24,13 +24,15 @@
         <td><%= carona.date_hour %></td>
         <td><%= carona.departure %></td>
         <td><%= carona.arrival %></td>
-        <%= Point.all.where(carona_id: carona.id).each do |point| %>
-          <%= point.address %>
+        <td>
+        <% Point.all.where(carona_id: carona.id).each do |point| %>
+          <%= point.address %><br> <br>
         <% end %>
+        </td>
         <td><%= carona.comments %></td>
         <td><%= link_to 'Show', users_backoffice_user_carona_path(current_user,carona) %></td>
         <td><%= link_to 'Edit', edit_users_backoffice_user_carona_path(current_user,carona) %></td>
-        <td><%= link_to 'Destroy', users_backoffice_user_carona_destroy_carona_path(current_user,carona), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', users_backoffice_user_carona_destroy_carona_path(current_user,carona), data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
